# opengl-perfomance-test

./: CMakeLists.txt  README.md  README_FINAL.md  difference.md  guide.md  plan.md  testing_result.md
multi_thread_test/: CMakeLists.txt
multi_thread_test/include/: multi_thread_app.h  render_thread.h
multi_thread_test/src/: main.cpp  multi_thread_app.cpp  render_thread.cpp
shared/: CMakeLists.txt
shared/include/: gl_utils.h  performance_monitor.h  terrain_generator.h
shared/shaders/: basic.frag  basic.vert  instanced.vert  terrain.frag
shared/src/: gl_utils.cpp  performance_monitor.cpp  terrain_generator.cpp
single_thread_test/: CMakeLists.txt
single_thread_test/include/: single_thread_app.h
single_thread_test/src/: main.cpp  single_thread_app.cpp
